<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Launchpad</string>
    <string name="action_settings">Settings</string>
    <string name="connect_settings">Connect</string>
    <string name="disconnect_settings">Disconnect</string>
    <string name="mutede2_settings">Mute DE2</string>
    <string name="unmutede2_settings">Unmute DE2</string>
    <string name="RecordStop_settings">Record/Stop</string>
    <string name="PlayStopRecorded_settings">Play/Stop Recorded</string>
    <string name="label_ip">IP:</string>
    <string name="playsong">Play Song</string>
    <string name="label_port">Port:</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Launchpad</string>
    <string name="label_myip">My IP:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="refresh_socket">Show Sock.</string>
    <string name="switch1">Mute</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
